...
            "state" : "translated",
            "value" : "°C"
          }
        }
      }
    },
    "About" : {
      "comment" : "A tab label for the \"About\" section.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Avansert snøklassifisering"
          }
        }
      }
    },
    "Always the best grip" : {
      "comment" : "Onboarding analytics page title",
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alltid det beste festet"
...
            "state" : "translated",
            "value" : "Hent anbefaling for din posisjon."
          }
        }
      }
    },
    "Get started for free" : {
      "comment" : "Onboarding trial page title",
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kom igang gratis"
...
            "state" : "translated",
            "value" : "Juridisk"
          }
        }
      }
    },
    "Loading..." : {
      "comment" : "A text indicating that content is loading.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Vennligst aktiver stedstjenester i innstillinger, eller velg en posisjon manuelt med knappen øverst til venstre."
          }
        }
      }
    },
    "Predictions" : {
      "comment" : "A tab label for the predictions section of the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Smøringer"
          }
        }
      }
    },
    "Privacy Policy" : {
      "comment" : "A link to the privacy policy of the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Velg alle"
          }
        }
      }
    },
    "Select Location" : {
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Velg lokasjon"
          }
...
            "state" : "translated",
            "value" : "Square Wave AS"
          }
        }
      }
    },
    "Start free trial" : {
      "comment" : "A button label that starts a free trial.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Abonnement i nåde-periode"
          }
        }
      }
    },
    "Subscription status" : {
      "comment" : "A section header that indicates the status of the user's subscription.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Vilkår for bruk"
          }
        }
      }
    },
    "Terms of Use" : {
      "comment" : "A link to the app's terms of use.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Kunne ikke laste abonnementer"
          }
        }
      }
    },
    "Unlimited wax & klister recommendations" : {
      "comment" : "A benefit of the subscription: unlimited wax and klister recommendations.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ubegrensede voks og klisteranbefalinger"
          }
        }
      }
    },
    "Unlock GetGrip" : {
      "comment" : "The title of the paywall view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Veldig våt"
          }
        }
      }
    },
    "Visible waxes" : {
      "comment" : "A navigation link to a view that lists the user's visible waxes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Værdata utilgjengelig"
          }
        }
      }
    },
    "Welcome to GetGrip" : {
      "comment" : "Onboarding welcome page title",
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Velkommen til GetGrip"
...
            "state" : "translated",
            "value" : "Du har %lld dager igjen av den gratis prøveperioden."
          }
        }
      }
    },
    "You're All Set" : {
      "comment" : "Onboarding title when user already has purchase",
      "localizations" : {
        "nb" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Du er klar!"
...
