...
    ToolbarItem(placement: leadingToolbarPlacement) {
      Button {
        showMapSelection = true
      } label: {
        Image(systemName: "map")
      }
      .accessibilityIdentifier("mapButton")
      .toolbarButtonStyle(
        tint: locStore.locationStatus == .manual_override && recStore.isSameAsWeatherKit
          ? .accentColor : .primary
      )
    }

    ToolbarItem(placement: trailingToolbarPlacement) {
      Button(action: handleLocationButtonTap) {
        Image(systemName: "location.fill")
      }
      .accessibilityIdentifier("locationButton")
      .toolbarButtonStyle(
        tint: recStore.isSameAsWeatherKit && locStore.locationStatus != .manual_override
          ? .accentColor : .primary
      )
    }
  }
...
